fix: disabled content-visibility

--- a/assets/css/semweb-style.css
+++ b/assets/css/semweb-style.css
@@ -143,7 +143,7 @@
 ** BGN: Attribution **
 *********************/
   figure.figure_box {
-    content-visibility: auto;
+    /* content-visibility: auto; */
     /* contain-intrinsic-size: auto; */
   }
 
